# openCV_Demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: opencv_test.cpp
tests/: CMakeLists.txt  imgRead.cpp  test_ImgRW.cpp  test_MaskOperation.cpp  test_Mat.cpp  test_pixelVisit.cpp  test_readImg.cpp
